# opencltest

./: .gitignore  CMakeLists.txt  main.cpp
